# ffmpeg-practice

./: README.md
h264_nalu_parse/: README.md  h264_parse.c  tiny_h264_stream.h264
h264_to_yuv/: CMakeLists.txt  README.md  main.c
